--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "export": "next export && touch out/.nojekyll",
+    "export": "next export",
     "build-ssg": "next build && next export && touch out/.nojekyll",
     "deploy": "gh-pages -d out -t true"
   },
