--- a/.github/workflows/node-js.yml
+++ b/.github/workflows/node-js.yml
@@ -27,7 +27,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
 
       - name: Install and Build 🔧
-        run: npm run build
+        run: yarn && yarn build && yarn export
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@3.7.1
