--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@reduxjs/toolkit": "^1.8.2",
     "@types/aos": "^3.0.4",
     "aos": "^2.3.4",
+    "axios": "^1.1.3",
     "fullpage.js": "^4.0.11",
     "i": "^0.3.7",
     "lottie-react": "^2.3.1",
